[project]
name = "carburoam"
version = "0.4.0"
description = " The first open-source live Gas Station price dashboard."
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]
authors = [
  {name = "Emilien Foissotte", email = "emilienfoissotte44@gmail.com"}
]
dependencies = [
    "boto3>=1.36.9",
    "psutil>=6.1.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-utils>=0.41.2",
    "st-social-media-links>=0.1.4",
    "streamlit>=1.41.1",
    "streamlit-authenticator>=0.4.1",
    "streamlit-folium>=0.24.0",
    "streamlit-geolocation>=0.0.10",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "duckdb>=1.1.3",
    "ipython>=8.31.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
