[project]
name = "carburoam"
version = "0.8.0"
description = " The first open-source live Gas Station price dashboard."
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]
authors = [
  {name = "Emilien Foissotte", email = "emilienfoissotte44@gmail.com"}
]
dependencies = [
    "boto3>=1.36.9",
    "discord-webhook>=1.4.1",
    "psutil>=6.1.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-utils>=0.41.2",
    "st-social-media-links>=0.1.4",
    "streamlit>=1.41.1",
    "streamlit-authenticator>=0.4.2",
    "streamlit-folium>=0.24.0",
    "streamlit-geolocation>=0.0.10",
    "towncrier>=24.8.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as online need (deselect with '-m \"not online\"')",
]

[tool.towncrier]
package = "carburoam"
package_dir = "src"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/emilien-foissotte/carburoam/tree/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/emilien-foisotte/carburoam/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[dependency-groups]
dev = [
    "duckdb>=1.1.3",
    "ipython>=8.31.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-playwright>=0.7.0",
    "requests>=2.32.3",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 80
